Updated Spring Boot Version to 2.6.7 and MongoDB to 3.3.3